Fixed accordion not collapsing + infeed image placeholder text

--- a/src/components/UI/Profile.css
+++ b/src/components/UI/Profile.css
@@ -41,6 +41,8 @@ table {
 }
 
 .carrousel {
+    justify-content: center;
+    align-items: center;
     grid-row: 2/3;
     grid-column: 1;
 }
